infra/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-api-service
  labels:
    app: library-api
spec:
  type: ClusterIP
  selector:
    app: library-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
